# topoflow

./: .gitignore  README.md  TOPOFLOW_SPEC.md  pyproject.toml
docs/superpowers/plans/: 2026-05-19-topoflow-prior.md
experiments/attention_swizzle/: shapes.yaml
experiments/bias_gelu_dropout/: shapes.yaml
experiments/fused_silu_mul_fp8_quant/: shapes.yaml
experiments/rmsnorm_residual/: shapes.yaml
scripts/: compare_runs.py  generate_seeds.py  package_for_geak.py
tests/: test_compare_runs.py  test_cost_model.py  test_dataflow.py  test_end_to_end.py  test_experiment_shapes.py  test_generate_seeds_cli.py  test_package_for_geak.py  test_remap_planner.py  test_schemas.py  test_seed_generator.py  test_tile_planner.py  test_topology.py  test_triton_templates.py
topoflow_prior/: __init__.py  cost_model.py  dataflow.py  remap_planner.py  schemas.py  seed_generator.py  tile_planner.py  topology.py  triton_templates.py
topoflow_prior/templates/triton/: attention_remap.py.j2  bias_gelu_dropout.py.j2  fused_silu_mul_fp8_quant.py.j2  rmsnorm_residual.py.j2
