[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topoflow-prior"
version = "0.1.0"
description = "Topology-aware seed prior for AMD GPU kernel optimization agents"
requires-python = ">=3.10"
dependencies = ["jinja2>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["topoflow_prior*"]
exclude = ["tests*", "scripts*"]

[tool.setuptools.package-data]
topoflow_prior = ["templates/triton/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
